--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,16 @@ services:
       - backend
 
   backend:
-    image: maimuna03/mep-backend:latest
+    #image: maimuna03/mep-backend:latest
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: mep-backend
     ports:
       - "8000:8000"
     volumes:
-      - ./backend/src:/app
+      - ./backend:/app
+      - /var/run/docker.sock:/var/run/docker.sock  # Docker-Socket hinzugefügt
     depends_on:
       - db
     environment:
