--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,7 @@ httpx
 pytest
 docker
 python-multipart
+sqlalchemy
+psycopg2  # PostgreSQL-Adapter für Python
+pydantic
+python-dotenv #um .env-Daten lesen zu können
