--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,17 @@ services:
       - backend
 
   backend:
-    image: maimuna03/mep-backend:latest
+    # image: maimuna03/mep-backend:latest
+    # image muss noch entkommentiert werden -> Es muss so aussehen wie in dev 
+    build:
+      context: ./backend
+      dockerfile: Dockerfile 
     container_name: mep-backend
     ports:
       - "8000:8000"
     volumes:
-      - ./backend/src:/app
+      - ./backend:/app
+      - /var/run/docker.sock:/var/run/docker.sock  # Docker-Socket hinzugefügt
     depends_on:
       - db
     env_file:
