--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
       - backend
 
   backend:
-    image: maimuna03/mep-backend:latest 
-    # build:
-    #  context: ./backend
-    #  dockerfile: Dockerfile 
+    # image: maimuna03/mep-backend:latest 
+    build:
+     context: ./backend
+     dockerfile: Dockerfile 
     container_name: mep-backend
     ports:
       - "8000:8000"
