--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
   backend:
     # image: maimuna03/mep-backend:latest 
     build:
-    context: ./backend
-    dockerfile: Dockerfile 
+      context: ./backend
+      dockerfile: Dockerfile 
     container_name: mep-backend
     ports:
       - "8000:8000"
@@ -25,7 +25,8 @@ services:
       - ./backend:/app
       - /var/run/docker.sock:/var/run/docker.sock  # Docker-Socket hinzugefügt
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     env_file:
       - ./backend/.env
 
@@ -43,6 +44,11 @@ services:
       - postgres_data:/var/lib/postgresql/data
       # Führt einmalig beim allerersten Start das SQL-Initialisierungsskript aus (nicht mehr bei späteren Starts, wenn Daten schon da sind)
       - ./database/schemas/init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck: 
+      test: ["CMD-SHELL", "exit 0"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   postgres_data:
