--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,5 @@ sqlalchemy
 psycopg2-binary # psycopg2 PostgreSQL-Adapter für Python
 pydantic
 python-dotenv  # um .env-Daten lesen zu können
+numpy
+pydicom
