--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql://imblue_user:secret@db:5432/imblue_db
+TEST_DATABASE_URL=postgresql://imblue_user:secret@localhost:5432/test_ki_image
