--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,9 @@ FROM python:3.12-slim
 # Setze Arbeitsverzeichnis
 WORKDIR /app
 
+# PYTHONPATH setzen, damit 'services', 'api' gibi modüller tanınsın
+ENV PYTHONPATH=/app
+
 # requirements installieren
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
@@ -11,4 +14,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY src/ .
 
 # Starte FastAPI mit Uvicorn und berücksichtige den Pfad zu main.py
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
