--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,16 @@
 services:
-
   keycloak_imblue:
     image: quay.io/keycloak/keycloak:26.2.4
     container_name: mep-keycloak
-    command: start-dev
+    # Startet Keycloak im Entwickler-Modus (kein HTTPS, schnelleres Setup) & Importiert einmalig beim ersten Start den Realm aus der Datei im Volume
+    # Wichtig: Der Import passiert nur, wenn dieser Realm im Keycloak noch nicht existiert. Wenn du z. B. den Container löschst oder das Volume entfernst, wird er beim nächsten Start erneut importiert.
+    command: start-dev --import-realm 
     env_file:
       - ./.env
     ports:
       - "8090:8080"
+    volumes:
+      - ./keycloak-export:/opt/keycloak/data/import
     depends_on:
       db:
         condition: service_healthy
