--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,9 @@ FROM python:3.12-slim
 # Setze Arbeitsverzeichnis
 WORKDIR /app
 
+#PYTHONPATH setzen, damit 'services', 'api' gibi modüller tanınsın,
+ENV PYTHONPATH=/app
+
 # requirements installieren
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
