2 Datenbanken (kc & our) + .yaml angepasst

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql://imblue_user:secret@db:5432/imblue_db
+DATABASE_URL=postgresql://imblue_user:imblue_pass@imblue-db/imblue_db
 UPLOAD_DIR=/tmp/uploads
 PROCESSED_DIR=/tmp/processed
