keycloak export Scripts & README erstellt

--- a/keycloak/.env
+++ b/keycloak/.env
@@ -8,7 +8,7 @@ KC_DB_URL_HOST=kc_imblue-db
 KC_DB_URL_DATABASE=kc_imblue_db
 KC_DB_SCHEMA=public
 
-# Für den PostgreSQL-Container von Keycloak (wichtig!)
+# Für den PostgreSQL-Container von Keycloak (db)
 POSTGRES_DB=kc_imblue_db
 POSTGRES_USER=kc_imblue_user
 POSTGRES_PASSWORD=kc_imblue_pass
