--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,10 +56,10 @@ services:
       - mep-network
 
   backend:
-    #image: maimuna03/mep-backend:latest   
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: maimuna03/mep-backend:latest   
+    #build:
+    #  context: ./backend
+    #  dockerfile: Dockerfile
     container_name: mep-backend
     depends_on:
       imblue-db:
@@ -81,10 +81,10 @@ services:
       - mep-network
 
   frontend:
-    #image: maimuna03/mep-frontend:latest
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    image: maimuna03/mep-frontend:latest
+    #build:
+    #  context: ./frontend
+    #  dockerfile: Dockerfile
     container_name: mep-frontend
     depends_on:
       keycloak:
