/tmp/logs änderungen

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=postgresql://imblue_user:imblue_pass@imblue-db/imblue_db
 UPLOAD_DIR=/tmp/uploads
 PROCESSED_DIR=/tmp/processed
+LOG_DIR=/tmp/logs
