--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,7 @@ ENV PYTHONPATH=/app
 # requirements installieren
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && apt-get install -y curl
 
 # Nur den Inhalt von src/ ins Container-Verzeichnis kopieren
 COPY src/ .
