--- a/loki-config.yaml
+++ b/loki-config.yaml
@@ -35,6 +35,10 @@ storage_config:                           # Speichert Chunks und Indizes im loka
     shared_store: filesystem
   filesystem:
     directory: /loki/chunks
+    
+compactor:                             
+  working_directory: /loki/compactor
+  shared_store: filesystem
 
 limits_config:
   retention_period: 7d                   # Logs werden nach 7 Tagen automatisch gelöscht (30d/720h für 30 TAGE)
