--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Python Bytecode
 __pycache__/
 *.py[cod]
+storage/loki/ # Arbeitsverzeichnisse von Loki (Log-Dateien, Chunks, Indexe etc.)
 
 #Sensible Daten wie Passwort & Benutzername -> Es werden alle .env-Dateien ignoriert
 #*.env
